5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1717_2526.log
== TEST (2019-05-12 23:50:48) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i+1)
	if ( r == 0):
		div1 = i+1
		soma1 = soma1 + div1
		print(div1)
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i+1)
	if ( r == 0):
		div2 = i+1
		soma2 = soma2 + div2
		print(div)
print(soma2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    r1 = n1%(i+1)
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:51:41) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i+1)
	if ( r == 0):
		div1 = i1+1
		soma1 = soma1 + div1
		print(div1)
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i+1)
	if ( r == 0):
		div2 = i1+1
		soma2 = soma2 + div2
		print(div)
print(soma2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    r1 = n1%(i+1)
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:52:19) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if ( r == 0):
		div1 = i1+1
		soma1 = soma1 + div1
		print(div1)
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if ( r == 0):
		div2 = i1+1
		soma2 = soma2 + div2
		print(div)
print(soma2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if ( r == 0):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:52:52) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
		print(div1)
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i1+1
		soma2 = soma2 + div2
		print(div)
print(soma2)
		
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:54:30) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
		print(div1)
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i1+1
		soma2 = soma2 + div2
		print(div)
	i2 = i2+1	
print(soma2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 26, in <module>
    print(div)
NameError: name 'div' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:54:52) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
		print(div1)
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i1+1
		soma2 = soma2 + div2
		print(div2)
	i2 = i2+1	
print(soma2)
		
-- OUTPUT:
1
2
4
5
10
20
131
262
524
655
1310
2924
2620
2620
2620
2620
2620
2620
2620
2620
2620
2620
2620
28820
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:56:20) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
		print(div1)
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
		print(div2)
	i2 = i2+1	
print(soma2)
		
-- OUTPUT:
1
2
4
5
10
20
131
262
524
655
1310
2924
1
2
4
17
34
43
68
86
172
731
1462
2620
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:58:22) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
		print(div1)
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
		print(div2)
	i2 = i2+1	
print(soma2)
if(soma1 = n2 and soma2 = n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
File "XXXX", line 29
    if(soma1 = n2 and soma2 = n1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:58:33) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
		print(div1)
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
		print(div2)
	i2 = i2+1	
print(soma2)
if(soma1 == n2 and soma2 == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1
2
4
5
10
20
131
262
524
655
1310
2924
1
2
4
17
34
43
68
86
172
731
1462
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:58:59) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
		print(div1)
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
		print(div2)
	i2 = i2+1	
print(soma2)
if(soma1 == n2 and soma2 == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1
2
4
5
10
20
131
262
524
655
1310
2924
1
2
4
17
34
43
68
86
172
731
1462
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:59:40) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
	i2 = i2+1	
print(soma2)
if(soma1 == n2 and soma2 == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:59:52) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
	i2 = i2+1	
print(soma2)
if(soma1 == n2 and soma2 == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 00:00:02) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
	i2 = i2+1	
print(soma2)
if(soma1 == n2 and soma2 == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.16934
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
2924
2620
AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
284
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
66992
66928
AMIGOS
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 11:02:58) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
	i2 = i2+1	
print(soma2)
if(soma1 == n2 and soma2 == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 19:22:00) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
	i2 = i2+1	
print(soma2)
if(soma1 == n2 and soma2 == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 19:22:38) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
	i2 = i2+1	
print(soma2)
if(soma1 == n2 and soma2 == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 19:24:00) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
	i2 = i2+1	
print(soma2)
if(soma1 == n2 and soma2 == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 19:30:41) 
-- CODE:
#Entrada dos numeros inteiros positivos
n1 = int(input("Digite um numero inteiro positivo: "))
n2 = int(input("Digite outro numero inteiro positivo: "))

soma1 = 0 #variavel acumuladora do n1
soma2 = 0 #variavel acumuladora do n2
i1 = 0 #variavel contadora do n1
i2 = 0 #variavel contadora do n2

#montagem do laco de repeticao

while (i1 < n1-1):
	r1 = n1%(i1+1)
	if (r1 == 0):
		div1 = i1+1
		soma1 = soma1 + div1
	i1 = i1 + 1	
print(soma1)

while (i2 < n2-1):
	r2 = n2%(i2+1)
	if (r2 == 0):
		div2 = i2+1
		soma2 = soma2 + div2
	i2 = i2+1	
print(soma2)
if(soma1 == n2 and soma2 == n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
